Fixing gallery alignment.

--- a/sass/_media/_galleries.scss
+++ b/sass/_media/_galleries.scss
@@ -8,6 +8,7 @@
   @include flex-box;
   @include flex-container--column;
   @include flex-box--no-grow;
+  @include flex-justify--center;
   margin-bottom: $spacing-regular--half;
 }
 
